--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: gitops-nginx
   name: gitops-nginx
 spec:
-  replicase: 5
+  replicas: 5
   selector:
     matchLabels:
       app: gitops-nginx
